<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="shirts">
        <item>maike</item>
        <item>maike2</item>
        <item>maike3</item>
        <item>maike4</item>
        <item>maike5</item>
        <item>maike6</item>
        <item>maike7</item>
        <item>maike8</item>
    </string-array>

    <string-array name="caps">
        <item>kepure</item>
        <item>kepure2</item>
        <item>kepure3</item>
        <item>kepure4</item>
        <item>kepure5</item>
        <item>kepure6</item>
        <item>kepure7</item>
        <item>kepure8</item>
        <item>kepure9</item>
        <item>kepure10</item>
    </string-array>

    <string-array name="jeans">
        <item>kelnes</item>
        <item>kelnes2</item>
        <item>kelnes3</item>
        <item>kelnes4</item>
        <item>kelnes5</item>
        <item>kelnes6</item>
        <item>kelnes7</item>
        <item>kelnes8</item>
        <item>kelnes9</item>
        <item>kelnes10</item>
    </string-array>


    <string-array name="glasses">
        <item>akiniai</item>
        <item>akiniai2</item>
        <item>akiniai3</item>
        <item>akiniai4</item>
        <item>akiniai5</item>
        <item>akiniai6</item>
        <item>akiniais7</item>
        <item>akiniai8</item>
        <item>akiniai9</item>
        <item>akiniai10</item>
        <item>akiniai11</item>
    </string-array>


    <string name="app_name">LOGIC FOR FUN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_shop_item" translatable="false">600 eur</string>
    <string name="title_shop_item" translatable="false" />
    <string name="demo_name" translatable="false">Marius Gžegoževskis</string>
    <string name="demo_email" translatable="false">m.gzegozevskis@gmail.com</string>
    <string name="play">Play</string>
    <string name="high_scores">High Scores</string>
    <string name="shop">Shop</string>
    <string name="completion" translatable="false">0%</string>
    <string name="categoryImageDescription">categoryName</string>
    <string name="category_title" translatable="false">Nature</string>
    <string name="gold">Money</string>
    <string name="score">Score</string>
    <string name="solved">Completed</string>
    <string name="reward_dialog">Reward dialog</string>
    <string name="repeat_level">REPEAT LEVEL</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="level_complete">LEVEL COMPLETE</string>
    <string name="time_left">Time</string>
    <string name="loose_dialog_title">Try again :(</string>
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ad_mob_rewarded_video_ad_test" translatable="false">ca-app-pub-3774934041759221/6569360081</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="fragment_level_choose">Choose level</string>
    <string name="fragment_privacy_policy">Privacy Policy</string>
    <string name="loose_dialog_ad_text">Click on chest watch video ad and get reward!</string>
    <string name="prize">Your prize is here!</string>
    <string name="profile">Profile</string>
    <string name="multiplier2x">Double coins</string>
    <string name="multiplier3x">Triple coins</string>
    <string name="free_gift">Free Gift</string>
    <string name="special_levels">Unlock special levels</string>
    <string name="game_ticket">Game ticket</string>
    <string name="random_item">Random item</string>
    <string name="extra_coins">Extra coins</string>
    <string name="knowledge">Knowledge</string>
    <string name="name_updated">Your name is successful updated!</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="game_guide">Game guide</string>
    <string name="hint_profile">Jeans, Shirt, Cap makes you stronger!</string>
    <string name="press_on_item_profile">\"Click\" on clothes down bellow to put on! \"Long press\" to sell it!</string>
    <string name="extra_stats_profile_hint">Additional points when you getting prizes</string>
    <string name="get_reward_text_message">Click on chest and grab your loot!</string>
    <string name="sell_item">Sell item</string>
    <string name="back">Back to shop</string>
    <string name="special_level_pass">You need buy special levels ticket in app shop to play here!</string>
    <string name="next">Next</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="startName">Puzzle master</string>
    <string name="accept">Accept</string>
    <string name="loading">PLEASE WAIT...</string>
    <string name="share">Share with friends</string>
    <string name="share_app_text">Share \"Logic for fun\" with your friends ❤ https://play.google.com/store/apps/details?id=get.some.money.starter</string>
    <string name="do_not_show">Do not show tips</string>
    <string name="start_play">Start play</string>
    <string name="demoGame" translatable="false">Pagal pateiktą klausimą ar teiginį! Pakanka spustelėti ant paveikslėlių ir sudėtį loginę seką!</string>
    <string name="share_types" >Share app with friends via</string>
    <string name="production_ad_id">ca-app-pub-9087133931125731~3617917200</string>


</resources>
