<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
        android:title="@string/home"/>


    </group>
    <item android:title="Game Zone">
        <menu>
            <item
                android:id="@+id/gameplayFragment"
                android:icon="@drawable/taure"
                android:title="@string/high_scores"/>
            <item
                android:id="@+id/sign_in_firebase_ui"
                android:icon="@drawable/shop"
                android:title="@string/shop"/>
            <item
                android:id="@+id/privycyPolicy"
                android:icon="@drawable/policy"
                android:title="@string/privacy_policy"/>
            <item
                android:id="@+id/details"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="details"/>

        </menu>


    </item>
</menu>