<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    tools:context=".Fragments.HomeFragment">


    <TextView
        android:id="@+id/start_game4"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hover_menu_item"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/shop"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_game2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game" />

    <TextView
        android:id="@+id/start_game2"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hover_menu_item"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/high_scores"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_game3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game4" />

    <TextView
        android:id="@+id/start_game3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/hover_menu_item"
        android:gravity="center_horizontal|center_vertical"
        android:text="Login"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_game2" />

    <TextView
        android:id="@+id/start_game"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hover_menu_item"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_game4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>